#61: Add finance account chooser for vat type

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityVatTypes_da.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityVatTypes_da.properties
@@ -5,6 +5,14 @@ new.entity.vat.types.incoming.percentage=25
 new.entity.vat.types.outgoing.percentage=25
 new.entity.vat.types.representation.percentage=6.25
 
+new.entity.finance.account.LIABILITY.vat.incoming=Indg\u00E5ende moms
+new.entity.finance.account.LIABILITY.vat.incoming.account.number=26100
+new.entity.finance.account.LIABILITY.vat.representation=Representations moms
+new.entity.finance.account.LIABILITY.vat.representation.account.number=26200
+new.entity.finance.account.LIABILITY.vat.outgoing=Udg\u00E5ende moms
+new.entity.finance.account.LIABILITY.vat.outgoing.account.number=26300
+
+
 
 
 
