#83: Add EU Vat accounts and VAT types for for demo date

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts_da.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts_da.properties
@@ -5,6 +5,7 @@ new.entity.finance.account.PROFIT.sales.dkk.without.vat=Salg DKK uden moms
 new.entity.finance.account.PROFIT.sales.dkk.without.vat.account.number=1200
 new.entity.finance.account.PROFIT.sales.eur=Salg europa
 new.entity.finance.account.PROFIT.sales.eur.account.number=1300
+new.entity.finance.account.PROFIT.sales.eur.vat.type=EU_U25
 new.entity.finance.account.PROFIT.sales.world=Salg verden
 new.entity.finance.account.PROFIT.sales.world.account.number=1400
 
@@ -16,6 +17,7 @@ new.entity.finance.account.EXPENSE.purchases.dk.without.vat=Varek\u00F8b DKK ude
 new.entity.finance.account.EXPENSE.purchases.dk.without.vat.account.number=2200
 new.entity.finance.account.EXPENSE.purchases.eur=Varek\u00F8b europa
 new.entity.finance.account.EXPENSE.purchases.eur.account.number=2300
+new.entity.finance.account.EXPENSE.purchases.eur.vat.type=EU_I25
 new.entity.finance.account.EXPENSE.purchases.world=Varek\u00F8b verden
 new.entity.finance.account.EXPENSE.purchases.world.account.number=2400
 
