--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityVatTypes_da.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityVatTypes_da.properties
@@ -1,9 +1,13 @@
 new.entity.vat.types.incoming=Indg\u00E5ende moms
 new.entity.vat.types.outgoing=Udg\u00E5ende moms
 new.entity.vat.types.representation=Repr\u00E6sentations moms
+new.entity.vat.types.incoming.eu=EU indg\u00E5ende moms
+new.entity.vat.types.outgoing.eu=EU udg\u00E5ende moms
 new.entity.vat.types.incoming.percentage=25
 new.entity.vat.types.outgoing.percentage=25
 new.entity.vat.types.representation.percentage=6.25
+new.entity.vat.types.incoming.eu.percentage=25
+new.entity.vat.types.outgoing.eu.percentage=25
 
 new.entity.finance.account.LIABILITY.vat.incoming=Indg\u00E5ende moms
 new.entity.finance.account.LIABILITY.vat.incoming.account.number=26100
@@ -12,6 +16,10 @@ new.entity.finance.account.LIABILITY.vat.representation.account.number=26200
 new.entity.finance.account.LIABILITY.vat.outgoing=Udg\u00E5ende moms
 new.entity.finance.account.LIABILITY.vat.outgoing.account.number=26300
 
+new.entity.finance.account.LIABILITY.vat.incoming.eu=EU indg\u00E5ende moms
+new.entity.finance.account.LIABILITY.vat.incoming.eu.account.number=26150
+new.entity.finance.account.LIABILITY.vat.outgoing.eu=EU udg\u00E5ende moms
+new.entity.finance.account.LIABILITY.vat.outgoing.eu.account.number=26250
 
 
 
