#96: Add headlines and sum to demo data

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts_da.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts_da.properties
@@ -1,3 +1,5 @@
+new.entity.finance.account.HEADLINE.sales=Salg
+new.entity.finance.account.HEADLINE.sales.account.number=1000
 new.entity.finance.account.PROFIT.sales.dkk=Salg DKK
 new.entity.finance.account.PROFIT.sales.dkk.account.number=1100
 new.entity.finance.account.PROFIT.sales.dkk.vat.type=U25
@@ -9,7 +11,8 @@ new.entity.finance.account.PROFIT.sales.eur.vat.type=EU_U25
 new.entity.finance.account.PROFIT.sales.world=Salg verden
 new.entity.finance.account.PROFIT.sales.world.account.number=1400
 
-
+new.entity.finance.account.HEADLINE.purchases=Varek\u00F8b
+new.entity.finance.account.HEADLINE.purchases.account.number=2000
 new.entity.finance.account.EXPENSE.purchases.dk=Varek\u00F8b DKK
 new.entity.finance.account.EXPENSE.purchases.dk.account.number=2100
 new.entity.finance.account.EXPENSE.purchases.dk.vat.type=I25
@@ -21,7 +24,8 @@ new.entity.finance.account.EXPENSE.purchases.eur.vat.type=EU_I25
 new.entity.finance.account.EXPENSE.purchases.world=Varek\u00F8b verden
 new.entity.finance.account.EXPENSE.purchases.world.account.number=2400
 
-
+new.entity.finance.account.HEADLINE.wages=Medarbejder udgifter
+new.entity.finance.account.HEADLINE.wages.account.number=3000
 new.entity.finance.account.EXPENSE.wages.wages=L\u00F8nninger
 new.entity.finance.account.EXPENSE.wages.wages.account.number=3100
 new.entity.finance.account.EXPENSE.wages.pension=Pension
@@ -39,7 +43,8 @@ new.entity.finance.account.EXPENSE.wages.lunch.account.number=3700
 new.entity.finance.account.EXPENSE.wages.other.cost=Andre omkostninger
 new.entity.finance.account.EXPENSE.wages.other.cost.account.number=3800
 
-
+new.entity.finance.account.HEADLINE.premises=Lokaler
+new.entity.finance.account.HEADLINE.premises.account.number=4000
 new.entity.finance.account.EXPENSE.premises.rent=Husleje
 new.entity.finance.account.EXPENSE.premises.rent.account.number=4100
 new.entity.finance.account.EXPENSE.premises.rent.vat.type=I25
@@ -50,6 +55,8 @@ new.entity.finance.account.EXPENSE.premises.maintenance=Vedligeholdelse
 new.entity.finance.account.EXPENSE.premises.maintenance.account.number=4300
 new.entity.finance.account.EXPENSE.premises.maintenance.vat.type=I25
 
+new.entity.finance.account.HEADLINE.administration=Administration
+new.entity.finance.account.HEADLINE.administration.account.number=5000
 new.entity.finance.account.EXPENSE.administration.office.supplies=Kontorforsyninger
 new.entity.finance.account.EXPENSE.administration.office.supplies.account.number=5100
 new.entity.finance.account.EXPENSE.administration.office.supplies.vat.type=I25
@@ -82,7 +89,8 @@ new.entity.finance.account.EXPENSE.administration.bad.debt=Tab p\u00E5 debitorer
 new.entity.finance.account.EXPENSE.administration.bad.debt.account.number=6100
 new.entity.finance.account.EXPENSE.administration.bad.debt.vat.type=I25
 
-
+new.entity.finance.account.HEADLINE.depreciation=Afskrivninger
+new.entity.finance.account.HEADLINE.depreciation.account.number=7000
 new.entity.finance.account.EXPENSE.depreciation.inventory=Afskrivninger inventar
 new.entity.finance.account.EXPENSE.depreciation.inventory.account.number=7100
 new.entity.finance.account.EXPENSE.depreciation.goodwill=Afskrivninger goodwill
@@ -94,21 +102,24 @@ new.entity.finance.account.EXPENSE.depreciation.operation.account.number=7400
 new.entity.finance.account.EXPENSE.depreciation.leasehold=Afskrivninger indretning af lejede lokaler
 new.entity.finance.account.EXPENSE.depreciation.leasehold.account.number=7500
 
-
+new.entity.finance.account.HEADLINE.received.interest=Modtagne renter
+new.entity.finance.account.HEADLINE.received.interest.account.number=8000
 new.entity.finance.account.PROFIT.received.interest.bank=Modtagne bank renter
-new.entity.finance.account.PROFIT.received.interest.bank.account.number=8100
+new.entity.finance.account.PROFIT.received.interest.bank.account.number=8050
 new.entity.finance.account.PROFIT.received.interest.debtor=Modtagne debitor renter
-new.entity.finance.account.PROFIT.received.interest.debtor.account.number=8200
+new.entity.finance.account.PROFIT.received.interest.debtor.account.number=8100
 
-
+new.entity.finance.account.HEADLINE.paid.interest=Betalte renter
+new.entity.finance.account.HEADLINE.paid.interest.account.number=8200
 new.entity.finance.account.EXPENSE.paid.interest.bank=Modtagne renter, bank
-new.entity.finance.account.EXPENSE.paid.interest.bank.account.number=8300
+new.entity.finance.account.EXPENSE.paid.interest.bank.account.number=8250
 new.entity.finance.account.EXPENSE.paid.interest.creditor=Modtagne renter, kreditor
-new.entity.finance.account.EXPENSE.paid.interest.creditor.account.number=8400
+new.entity.finance.account.EXPENSE.paid.interest.creditor.account.number=8300
 new.entity.finance.account.EXPENSE.paid.interest.public=Modtagne renter, offentlig
-new.entity.finance.account.EXPENSE.paid.interest.public.account.number=8500
+new.entity.finance.account.EXPENSE.paid.interest.public.account.number=8400
 
-
+new.entity.finance.account.HEADLINE.other.tax=Skatter
+new.entity.finance.account.HEADLINE.other.tax.account.number=9000
 new.entity.finance.account.EXPENSE.other.tax.company.tax=Selskabsskat
 new.entity.finance.account.EXPENSE.other.tax.company.tax.account.number=9100
 new.entity.finance.account.EXPENSE.EXPENSE.other.tax.company.tax.previous.year=Selskabsskat tidligere \u00E5r
@@ -116,7 +127,8 @@ new.entity.finance.account.EXPENSE.EXPENSE.other.tax.company.tax.previous.year.a
 new.entity.finance.account.EXPENSE.other.tax.company.tax.deferred.tax=Hensat skat
 new.entity.finance.account.EXPENSE.other.tax.company.tax.deferred.tax.account.number=9300
 
-
+new.entity.finance.account.HEADLINE.inventory=Inventar
+new.entity.finance.account.HEADLINE.inventory.account.number=11000
 new.entity.finance.account.ASSET.inventory.acquisition.cost.start=Inventar kostpris starten af \u00E5ret
 new.entity.finance.account.ASSET.inventory.acquisition.cost.start.account.number=11100
 new.entity.finance.account.ASSET.inventory.acquisition.cost=Inventar kostpris
@@ -131,7 +143,8 @@ new.entity.finance.account.ASSET.inventory.depreciation.account.number=11500
 new.entity.finance.account.ASSET.inventory.depreciation.on.disposals=Inventar afskrivninger p\u00E5 frasalg
 new.entity.finance.account.ASSET.inventory.depreciation.on.disposals.account.number=11600
 
-
+new.entity.finance.account.HEADLINE.goodwill=Goodwill
+new.entity.finance.account.HEADLINE.goodwill.account.number=12000
 new.entity.finance.account.ASSET.goodwill.acquisition.cost.start=Goodwill kostpris starten af \u00E5ret
 new.entity.finance.account.ASSET.goodwill.acquisition.cost.start.account.number=12100
 new.entity.finance.account.ASSET.goodwill.acquisition.cost=Goodwill kostpris
@@ -146,7 +159,8 @@ new.entity.finance.account.ASSET.goodwill.depreciation.account.number=12500
 new.entity.finance.account.ASSET.goodwill.depreciation.on.disposals=Goodwill afskrivninger p\u00E5 frasalg
 new.entity.finance.account.ASSET.goodwill.depreciation.on.disposals.account.number=12600
 
-
+new.entity.finance.account.HEADLINE.rights=Rettigheder
+new.entity.finance.account.HEADLINE.rights.account.number=13000
 new.entity.finance.account.ASSET.rights.acquisition.cost.start=Rettigheder kostpris starten af \u00E5ret
 new.entity.finance.account.ASSET.rights.acquisition.cost.start.account.number=13100
 new.entity.finance.account.ASSET.rights.acquisition.cost=Rettigheder kostpris
@@ -161,7 +175,8 @@ new.entity.finance.account.ASSET.rights.depreciation.account.number=13500
 new.entity.finance.account.ASSET.rights.depreciation.on.disposals=Rettigheder afskrivninger p\u00E5 frasalg
 new.entity.finance.account.ASSET.rights.depreciation.on.disposals.account.number=13600
 
-
+new.entity.finance.account.HEADLINE.operation=Driftsmidler
+new.entity.finance.account.HEADLINE.operation.account.number=14000
 new.entity.finance.account.ASSET.operation.acquisition.cost.start=Driftsmidler kostpris starten af \u00E5ret
 new.entity.finance.account.ASSET.operation.acquisition.cost.start.account.number=14100
 new.entity.finance.account.ASSET.operation.acquisition.cost=Driftsmidler kostpris
@@ -176,7 +191,8 @@ new.entity.finance.account.ASSET.operation.depreciation.account.number=14500
 new.entity.finance.account.ASSET.operation.depreciation.on.disposals=Driftsmidler afskrivninger p\u00E5 frasalg
 new.entity.finance.account.ASSET.operation.depreciation.on.disposals.account.number=14600
 
-
+new.entity.finance.account.HEADLINE.leasehold=Indretning af lejede lokaler
+new.entity.finance.account.HEADLINE.leasehold.account.number=15000
 new.entity.finance.account.ASSET.leasehold.acquisition.cost.start=Indretning af lejede lokaler kostpris starten af \u00E5ret
 new.entity.finance.account.ASSET.leasehold.acquisition.cost.start.account.number=15100
 new.entity.finance.account.ASSET.leasehold.acquisition.cost=Indretning af lejede lokaler kostpris
@@ -191,7 +207,8 @@ new.entity.finance.account.ASSET.leasehold.depreciation.account.number=15500
 new.entity.finance.account.ASSET.leasehold.depreciation.on.disposals=Indretning af lejede lokaler afskrivninger p\u00E5 frasalg
 new.entity.finance.account.ASSET.leasehold.depreciation.on.disposals.account.number=15600
 
-
+new.entity.finance.account.HEADLINE.other.assets=Andre aktiver
+new.entity.finance.account.HEADLINE.other.assets.account.number=16000
 new.entity.finance.account.ASSET.debtors=Debitorer
 new.entity.finance.account.ASSET.debtors.account.number=16100
 new.entity.finance.account.ASSET.other.receivables=Andre tilgodehavender
@@ -203,20 +220,25 @@ new.entity.finance.account.ASSET.cash.account.number=17100
 new.entity.finance.account.ASSET.bank.account=Bankkonto
 new.entity.finance.account.ASSET.bank.account.account.number=17200
 
-
+new.entity.finance.account.HEADLINE.equity=Egenkapital
+new.entity.finance.account.HEADLINE.equity.account.number=21000
 new.entity.finance.account.LIABILITY.share.capital=Anpartskapital
 new.entity.finance.account.LIABILITY.share.capital.account.number=21100
 new.entity.finance.account.LIABILITY.retained.earnings=Overf\u00F8rt resultat tidligere \u00E5r
 new.entity.finance.account.LIABILITY.retained.earnings.account.number=21200
 
-
+new.entity.finance.account.HEADLINE.provision=Hens\u00E6ttelser
+new.entity.finance.account.HEADLINE.provision.account.number=22000
 new.entity.finance.account.LIABILITY.provisions.deferred.tax=Hensat skat
 new.entity.finance.account.LIABILITY.provisions.deferred.tax.account.number=22100
 
-
+new.entity.finance.account.HEADLINE.long.term.debt=Langfristet g\u00E6ld
+new.entity.finance.account.HEADLINE.long.term.debt.account.number=23000
 new.entity.finance.account.LIABILITY.long.term.debt.loan=Bankl\u00E5n
 new.entity.finance.account.LIABILITY.long.term.debt.loan.account.number=23100
 
+new.entity.finance.account.HEADLINE.short.term.debt=Kortfristet g\u00E6ld
+new.entity.finance.account.HEADLINE.short.term.debt.account.number=24000
 new.entity.finance.account.LIABILITY.bank.debt.credit=Kassekredit
 new.entity.finance.account.LIABILITY.bank.debt.credit.account.number=24100
 
