#96: Add headlines and sum to demo data

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts_da.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts_da.properties
@@ -1,3 +1,6 @@
+new.entity.finance.account.CATEGORY.income.statement=RESULTATOPG\u00D8RELSE
+new.entity.finance.account.CATEGORY.income.statement.account.number=0000
+
 new.entity.finance.account.HEADLINE.sales=Salg
 new.entity.finance.account.HEADLINE.sales.account.number=1000
 new.entity.finance.account.PROFIT.sales.dkk=Salg DKK
@@ -10,6 +13,10 @@ new.entity.finance.account.PROFIT.sales.eur.account.number=1300
 new.entity.finance.account.PROFIT.sales.eur.vat.type=EU_U25
 new.entity.finance.account.PROFIT.sales.world=Salg verden
 new.entity.finance.account.PROFIT.sales.world.account.number=1400
+new.entity.finance.account.SUM.sales=Salg total
+new.entity.finance.account.SUM.sales.account.number=1999
+new.entity.finance.account.SUM.sales.sum.from=1000
+new.entity.finance.account.SUM.sales.sum.to=1999
 
 new.entity.finance.account.HEADLINE.purchases=Varek\u00F8b
 new.entity.finance.account.HEADLINE.purchases.account.number=2000
@@ -23,6 +30,10 @@ new.entity.finance.account.EXPENSE.purchases.eur.account.number=2300
 new.entity.finance.account.EXPENSE.purchases.eur.vat.type=EU_I25
 new.entity.finance.account.EXPENSE.purchases.world=Varek\u00F8b verden
 new.entity.finance.account.EXPENSE.purchases.world.account.number=2400
+new.entity.finance.account.SUM.purchases=Varek\u00F8b total
+new.entity.finance.account.SUM.purchases.account.number=2999
+new.entity.finance.account.SUM.purchases.sum.from=2000
+new.entity.finance.account.SUM.purchases.sum.to=2999
 
 new.entity.finance.account.HEADLINE.wages=Medarbejder udgifter
 new.entity.finance.account.HEADLINE.wages.account.number=3000
@@ -42,6 +53,10 @@ new.entity.finance.account.EXPENSE.wages.lunch=Frokost
 new.entity.finance.account.EXPENSE.wages.lunch.account.number=3700
 new.entity.finance.account.EXPENSE.wages.other.cost=Andre omkostninger
 new.entity.finance.account.EXPENSE.wages.other.cost.account.number=3800
+new.entity.finance.account.SUM.wages=Medarbejder udgifter total
+new.entity.finance.account.SUM.wages.account.number=3999
+new.entity.finance.account.SUM.wages.sum.from=3000
+new.entity.finance.account.SUM.wages.sum.to=3999
 
 new.entity.finance.account.HEADLINE.premises=Lokaler
 new.entity.finance.account.HEADLINE.premises.account.number=4000
@@ -54,6 +69,10 @@ new.entity.finance.account.EXPENSE.premises.supplies.vat.type=I25
 new.entity.finance.account.EXPENSE.premises.maintenance=Vedligeholdelse
 new.entity.finance.account.EXPENSE.premises.maintenance.account.number=4300
 new.entity.finance.account.EXPENSE.premises.maintenance.vat.type=I25
+new.entity.finance.account.SUM.premises=Lokaler total
+new.entity.finance.account.SUM.premises.account.number=4999
+new.entity.finance.account.SUM.premises.sum.from=4000
+new.entity.finance.account.SUM.premises.sum.to=4999
 
 new.entity.finance.account.HEADLINE.administration=Administration
 new.entity.finance.account.HEADLINE.administration.account.number=5000
@@ -88,6 +107,10 @@ new.entity.finance.account.EXPENSE.administration.legal.assistance.vat.type=I25
 new.entity.finance.account.EXPENSE.administration.bad.debt=Tab p\u00E5 debitorer
 new.entity.finance.account.EXPENSE.administration.bad.debt.account.number=6100
 new.entity.finance.account.EXPENSE.administration.bad.debt.vat.type=I25
+new.entity.finance.account.SUM.administration=Administration total
+new.entity.finance.account.SUM.administration.account.number=6999
+new.entity.finance.account.SUM.administration.sum.from=5000
+new.entity.finance.account.SUM.administration.sum.to=6999
 
 new.entity.finance.account.HEADLINE.depreciation=Afskrivninger
 new.entity.finance.account.HEADLINE.depreciation.account.number=7000
@@ -101,6 +124,10 @@ new.entity.finance.account.EXPENSE.depreciation.operation=Afskrivninger driftsmi
 new.entity.finance.account.EXPENSE.depreciation.operation.account.number=7400
 new.entity.finance.account.EXPENSE.depreciation.leasehold=Afskrivninger indretning af lejede lokaler
 new.entity.finance.account.EXPENSE.depreciation.leasehold.account.number=7500
+new.entity.finance.account.SUM.depreciation=Afskrivninger total
+new.entity.finance.account.SUM.depreciation.account.number=7999
+new.entity.finance.account.SUM.depreciation.sum.from=7000
+new.entity.finance.account.SUM.depreciation.sum.to=7999
 
 new.entity.finance.account.HEADLINE.received.interest=Modtagne renter
 new.entity.finance.account.HEADLINE.received.interest.account.number=8000
@@ -108,6 +135,10 @@ new.entity.finance.account.PROFIT.received.interest.bank=Modtagne bank renter
 new.entity.finance.account.PROFIT.received.interest.bank.account.number=8050
 new.entity.finance.account.PROFIT.received.interest.debtor=Modtagne debitor renter
 new.entity.finance.account.PROFIT.received.interest.debtor.account.number=8100
+new.entity.finance.account.SUM.received.interest=Modtagne renter total
+new.entity.finance.account.SUM.received.interest.account.number=8199
+new.entity.finance.account.SUM.received.interest.sum.from=8000
+new.entity.finance.account.SUM.received.interest.sum.to=8199
 
 new.entity.finance.account.HEADLINE.paid.interest=Betalte renter
 new.entity.finance.account.HEADLINE.paid.interest.account.number=8200
@@ -117,6 +148,11 @@ new.entity.finance.account.EXPENSE.paid.interest.creditor=Modtagne renter, kredi
 new.entity.finance.account.EXPENSE.paid.interest.creditor.account.number=8300
 new.entity.finance.account.EXPENSE.paid.interest.public=Modtagne renter, offentlig
 new.entity.finance.account.EXPENSE.paid.interest.public.account.number=8400
+new.entity.finance.account.SUM.paid.interest=Betalte renter total
+new.entity.finance.account.SUM.paid.interest.account.number=8499
+new.entity.finance.account.SUM.paid.interest.sum.from=8200
+new.entity.finance.account.SUM.paid.interest.sum.to=8499
+
 
 new.entity.finance.account.HEADLINE.other.tax=Skatter
 new.entity.finance.account.HEADLINE.other.tax.account.number=9000
@@ -126,6 +162,19 @@ new.entity.finance.account.EXPENSE.EXPENSE.other.tax.company.tax.previous.year=S
 new.entity.finance.account.EXPENSE.EXPENSE.other.tax.company.tax.previous.year.account.number=9200
 new.entity.finance.account.EXPENSE.other.tax.company.tax.deferred.tax=Hensat skat
 new.entity.finance.account.EXPENSE.other.tax.company.tax.deferred.tax.account.number=9300
+
+new.entity.finance.account.SUM.other.tax=Skatter total
+new.entity.finance.account.SUM.other.tax.account.number=9998
+new.entity.finance.account.SUM.other.tax.sum.from=9000
+new.entity.finance.account.SUM.other.tax.sum.to=9998
+
+new.entity.finance.account.SUM.income.statement=RESULTATOPG\u00D8RELSE TOTAL
+new.entity.finance.account.SUM.income.statement.account.number=9999
+new.entity.finance.account.SUM.income.statement.sum.from=0
+new.entity.finance.account.SUM.income.statement.sum.to=9999
+
+new.entity.finance.account.CATEGORY.assets=AKTIVER
+new.entity.finance.account.CATEGORY.assets.account.number=10000
 
 new.entity.finance.account.HEADLINE.inventory=Inventar
 new.entity.finance.account.HEADLINE.inventory.account.number=11000
@@ -142,6 +191,10 @@ new.entity.finance.account.ASSET.inventory.depreciation=Inventar afskrivninger
 new.entity.finance.account.ASSET.inventory.depreciation.account.number=11500
 new.entity.finance.account.ASSET.inventory.depreciation.on.disposals=Inventar afskrivninger p\u00E5 frasalg
 new.entity.finance.account.ASSET.inventory.depreciation.on.disposals.account.number=11600
+new.entity.finance.account.SUM.inventory=Inventar total
+new.entity.finance.account.SUM.inventory.account.number=11999
+new.entity.finance.account.SUM.inventory.sum.from=11000
+new.entity.finance.account.SUM.inventory.sum.to=11999
 
 new.entity.finance.account.HEADLINE.goodwill=Goodwill
 new.entity.finance.account.HEADLINE.goodwill.account.number=12000
@@ -158,6 +211,10 @@ new.entity.finance.account.ASSET.goodwill.depreciation=Goodwill afskrivninger
 new.entity.finance.account.ASSET.goodwill.depreciation.account.number=12500
 new.entity.finance.account.ASSET.goodwill.depreciation.on.disposals=Goodwill afskrivninger p\u00E5 frasalg
 new.entity.finance.account.ASSET.goodwill.depreciation.on.disposals.account.number=12600
+new.entity.finance.account.SUM.goodwill=Goodwill total
+new.entity.finance.account.SUM.goodwill.account.number=12999
+new.entity.finance.account.SUM.goodwill.sum.from=12000
+new.entity.finance.account.SUM.goodwill.sum.to=12999
 
 new.entity.finance.account.HEADLINE.rights=Rettigheder
 new.entity.finance.account.HEADLINE.rights.account.number=13000
@@ -174,6 +231,10 @@ new.entity.finance.account.ASSET.rights.depreciation=Rettigheder afskrivninger
 new.entity.finance.account.ASSET.rights.depreciation.account.number=13500
 new.entity.finance.account.ASSET.rights.depreciation.on.disposals=Rettigheder afskrivninger p\u00E5 frasalg
 new.entity.finance.account.ASSET.rights.depreciation.on.disposals.account.number=13600
+new.entity.finance.account.SUM.rights=Rettigheder total
+new.entity.finance.account.SUM.rights.account.number=13999
+new.entity.finance.account.SUM.rights.sum.from=13000
+new.entity.finance.account.SUM.rights.sum.to=13999
 
 new.entity.finance.account.HEADLINE.operation=Driftsmidler
 new.entity.finance.account.HEADLINE.operation.account.number=14000
@@ -190,6 +251,10 @@ new.entity.finance.account.ASSET.operation.depreciation=Driftsmidler afskrivning
 new.entity.finance.account.ASSET.operation.depreciation.account.number=14500
 new.entity.finance.account.ASSET.operation.depreciation.on.disposals=Driftsmidler afskrivninger p\u00E5 frasalg
 new.entity.finance.account.ASSET.operation.depreciation.on.disposals.account.number=14600
+new.entity.finance.account.SUM.operation=Driftsmidler total
+new.entity.finance.account.SUM.operation.account.number=14999
+new.entity.finance.account.SUM.operation.sum.from=14000
+new.entity.finance.account.SUM.operation.sum.to=14999
 
 new.entity.finance.account.HEADLINE.leasehold=Indretning af lejede lokaler
 new.entity.finance.account.HEADLINE.leasehold.account.number=15000
@@ -206,6 +271,10 @@ new.entity.finance.account.ASSET.leasehold.depreciation=Indretning af lejede lok
 new.entity.finance.account.ASSET.leasehold.depreciation.account.number=15500
 new.entity.finance.account.ASSET.leasehold.depreciation.on.disposals=Indretning af lejede lokaler afskrivninger p\u00E5 frasalg
 new.entity.finance.account.ASSET.leasehold.depreciation.on.disposals.account.number=15600
+new.entity.finance.account.SUM.leasehold=Indretning af lejede lokaler total
+new.entity.finance.account.SUM.leasehold.account.number=15999
+new.entity.finance.account.SUM.leasehold.sum.from=15000
+new.entity.finance.account.SUM.leasehold.sum.to=15999
 
 new.entity.finance.account.HEADLINE.other.assets=Andre aktiver
 new.entity.finance.account.HEADLINE.other.assets.account.number=16000
@@ -213,6 +282,10 @@ new.entity.finance.account.ASSET.debtors=Debitorer
 new.entity.finance.account.ASSET.debtors.account.number=16100
 new.entity.finance.account.ASSET.other.receivables=Andre tilgodehavender
 new.entity.finance.account.ASSET.other.receivables.account.number=16200
+new.entity.finance.account.SUM.other.assets=Andre aktiver total
+new.entity.finance.account.SUM.other.assets.account.number=16999
+new.entity.finance.account.SUM.other.assets.sum.from=16000
+new.entity.finance.account.SUM.other.assets.sum.to=16999
 
 
 new.entity.finance.account.ASSET.cash=Kontanter
@@ -220,22 +293,47 @@ new.entity.finance.account.ASSET.cash.account.number=17100
 new.entity.finance.account.ASSET.bank.account=Bankkonto
 new.entity.finance.account.ASSET.bank.account.account.number=17200
 
+new.entity.finance.account.SUM.liquid.assets=Likvider total
+new.entity.finance.account.SUM.liquid.assets.account.number=17998
+new.entity.finance.account.SUM.liquid.assets.sum.from=17000
+new.entity.finance.account.SUM.liquid.assets.sum.to=17998
+
+new.entity.finance.account.SUM.assets=AKTIVER TOTAL
+new.entity.finance.account.SUM.assets.account.number=17999
+new.entity.finance.account.SUM.assets.sum.from=10000
+new.entity.finance.account.SUM.assets.sum.to=17999
+
+new.entity.finance.account.CATEGORY.liabilities=PASSIVER
+new.entity.finance.account.CATEGORY.liabilities.account.number=20000
+
 new.entity.finance.account.HEADLINE.equity=Egenkapital
 new.entity.finance.account.HEADLINE.equity.account.number=21000
 new.entity.finance.account.LIABILITY.share.capital=Anpartskapital
 new.entity.finance.account.LIABILITY.share.capital.account.number=21100
 new.entity.finance.account.LIABILITY.retained.earnings=Overf\u00F8rt resultat tidligere \u00E5r
 new.entity.finance.account.LIABILITY.retained.earnings.account.number=21200
+new.entity.finance.account.SUM.equity=Egenkapital total
+new.entity.finance.account.SUM.equity.account.number=21999
+new.entity.finance.account.SUM.equity.sum.from=21000
+new.entity.finance.account.SUM.equity.sum.to=21999
 
 new.entity.finance.account.HEADLINE.provision=Hens\u00E6ttelser
 new.entity.finance.account.HEADLINE.provision.account.number=22000
 new.entity.finance.account.LIABILITY.provisions.deferred.tax=Hensat skat
 new.entity.finance.account.LIABILITY.provisions.deferred.tax.account.number=22100
+new.entity.finance.account.SUM.provision=Hens\u00E6ttelser total
+new.entity.finance.account.SUM.provision.account.number=22999
+new.entity.finance.account.SUM.provision.sum.from=22000
+new.entity.finance.account.SUM.provision.sum.to=22999
 
 new.entity.finance.account.HEADLINE.long.term.debt=Langfristet g\u00E6ld
 new.entity.finance.account.HEADLINE.long.term.debt.account.number=23000
 new.entity.finance.account.LIABILITY.long.term.debt.loan=Bankl\u00E5n
 new.entity.finance.account.LIABILITY.long.term.debt.loan.account.number=23100
+new.entity.finance.account.SUM.long.term.debt=Langfristet g\u00E6ld total
+new.entity.finance.account.SUM.long.term.debt.account.number=23999
+new.entity.finance.account.SUM.long.term.debt.sum.from=23000
+new.entity.finance.account.SUM.long.term.debt.sum.to=23999
 
 new.entity.finance.account.HEADLINE.short.term.debt=Kortfristet g\u00E6ld
 new.entity.finance.account.HEADLINE.short.term.debt.account.number=24000
@@ -262,6 +360,16 @@ new.entity.finance.account.LIABILITY.other.debt.employee.holiday.pay=Skyldige fe
 new.entity.finance.account.LIABILITY.other.debt.employee.holiday.pay.account.number=27600
 new.entity.finance.account.LIABILITY.other.debt.others=Anden g\u00E6ld
 new.entity.finance.account.LIABILITY.other.debt.others.account.number=27700
+new.entity.finance.account.SUM.short.term.debt=Kortfristet g\u00E6ld total
+new.entity.finance.account.SUM.short.term.debt.account.number=29998
+new.entity.finance.account.SUM.short.term.debt.sum.from=24000
+new.entity.finance.account.SUM.short.term.debt.sum.to=29998
+
+new.entity.finance.account.SUM.liabilities=PASSIVER TOTAL
+new.entity.finance.account.SUM.liabilities.account.number=29999
+new.entity.finance.account.SUM.liabilities.sum.from=20000
+new.entity.finance.account.SUM.liabilities.sum.to=29999
+
 
 
 
