#100: Implement fiscal years and their limitations

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts_da.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts_da.properties
@@ -287,11 +287,12 @@ new.entity.finance.account.SUM.other.assets.account.number=16999
 new.entity.finance.account.SUM.other.assets.sum.from=16000
 new.entity.finance.account.SUM.other.assets.sum.to=16999
 
-
-new.entity.finance.account.ASSET.cash=Kontanter
-new.entity.finance.account.ASSET.cash.account.number=17100
-new.entity.finance.account.ASSET.bank.account=Bankkonto
-new.entity.finance.account.ASSET.bank.account.account.number=17200
+new.entity.finance.account.HEADLINE.liquid.assets=Likvider
+new.entity.finance.account.HEADLINE.liquid.assets.account.number=17000
+new.entity.finance.account.ASSET.liquid.assets.cash=Kontanter
+new.entity.finance.account.ASSET.liquid.assets.cash.account.number=17100
+new.entity.finance.account.ASSET.liquid.assets.bank.account=Bankkonto
+new.entity.finance.account.ASSET.liquid.assets.bank.account.account.number=17200
 
 new.entity.finance.account.SUM.liquid.assets=Likvider total
 new.entity.finance.account.SUM.liquid.assets.account.number=17998
@@ -310,8 +311,11 @@ new.entity.finance.account.HEADLINE.equity=Egenkapital
 new.entity.finance.account.HEADLINE.equity.account.number=21000
 new.entity.finance.account.LIABILITY.share.capital=Anpartskapital
 new.entity.finance.account.LIABILITY.share.capital.account.number=21100
-new.entity.finance.account.LIABILITY.retained.earnings=Overf\u00F8rt resultat tidligere \u00E5r
-new.entity.finance.account.LIABILITY.retained.earnings.account.number=21200
+
+new.entity.finance.account.SYSTEM.retained.earnings=Overf\u00F8rt resultat tidligere \u00E5r
+new.entity.finance.account.SYSTEM.retained.earnings.account.number=21200
+new.entity.finance.account.SYSTEM.retained.earnings.account.type=YEAR_END
+
 new.entity.finance.account.SUM.equity=Egenkapital total
 new.entity.finance.account.SUM.equity.account.number=21999
 new.entity.finance.account.SUM.equity.sum.from=21000
@@ -369,6 +373,8 @@ new.entity.finance.account.SUM.liabilities=PASSIVER TOTAL
 new.entity.finance.account.SUM.liabilities.account.number=29999
 new.entity.finance.account.SUM.liabilities.sum.from=20000
 new.entity.finance.account.SUM.liabilities.sum.to=29999
+
+
 
 
 
