--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts_da.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts_da.properties
@@ -374,6 +374,11 @@ new.entity.finance.account.SUM.liabilities.account.number=29999
 new.entity.finance.account.SUM.liabilities.sum.from=20000
 new.entity.finance.account.SUM.liabilities.sum.to=29999
 
+new.entity.finance.account.SUM.check=BALANCECHECK
+new.entity.finance.account.SUM.check.account.number=30000
+new.entity.finance.account.SUM.check.sum.from=0
+new.entity.finance.account.SUM.check.sum.to=30000
+
 
 
 
