#128: Create current result in equity section of balance.

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts_da.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts_da.properties
@@ -316,6 +316,10 @@ new.entity.finance.account.SYSTEM.retained.earnings=Overf\u00F8rt resultat tidli
 new.entity.finance.account.SYSTEM.retained.earnings.account.number=21200
 new.entity.finance.account.SYSTEM.retained.earnings.account.type=YEAR_END
 
+new.entity.finance.account.SYSTEM.current.result=\u00C5ret resultat
+new.entity.finance.account.SYSTEM.current.result.account.number=21300
+new.entity.finance.account.SYSTEM.current.result.account.type=CURRENT_RESULT
+
 new.entity.finance.account.SUM.equity=Egenkapital total
 new.entity.finance.account.SUM.equity.account.number=21999
 new.entity.finance.account.SUM.equity.sum.from=21000
