--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts_da.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts_da.properties
@@ -380,6 +380,7 @@ new.entity.finance.account.SUM.liabilities.sum.to=29999
 
 new.entity.finance.account.SYSTEM.check=BALANCE CHECK
 new.entity.finance.account.SYSTEM.check.account.number=30000
+new.entity.finance.account.SYSTEM.check.account.type=BALANCE_CHECK
 
 
 
