#121: Add vat headline and sum accounts to demodata

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts_da.properties
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/services/newEntityFinanceAccounts_da.properties
@@ -351,8 +351,16 @@ new.entity.finance.account.LIABILITY.bank.debt.credit.account.number=24100
 new.entity.finance.account.LIABILITY.trade.creditors=Kreditorer
 new.entity.finance.account.LIABILITY.trade.creditors.account.number=25100
 
+new.entity.finance.account.HEADLINE.vat=Moms
+new.entity.finance.account.HEADLINE.vat.account.number=26000
+
 new.entity.finance.account.LIABILITY.vat.reconciliation=Momsafstemning
 new.entity.finance.account.LIABILITY.vat.reconciliation.account.number=26400
+
+new.entity.finance.account.SUM.vat=Moms total
+new.entity.finance.account.SUM.vat.account.number=26500
+new.entity.finance.account.SUM.vat.sum.from=26000
+new.entity.finance.account.SUM.vat.sum.to=26500
 
 new.entity.finance.account.LIABILITY.other.debt.employee.tax.a-skat=Skyldig A-skat
 new.entity.finance.account.LIABILITY.other.debt.employee.tax.a-skat.account.number=27100
