--- a/mainwar/src/main/jasperreports/BalancePage_da.properties
+++ b/mainwar/src/main/jasperreports/BalancePage_da.properties
@@ -2,8 +2,8 @@ report.title=Balance for {0}
 report.accounts=Konti: {0} - {1}
 report.dates={0} - {1}  
 report.dates.compare={0} - {1}\n{2}
-account.number=Kontonummer
-account.name=Kontonavn
+account.number=Nr.
+account.name=Navn
 sum=Saldo
 page=Side
 of=af
